--- a/package.json
+++ b/package.json
@@ -1,33 +1,43 @@
 {
-  "name": "mozu",
+  "name": "mikkabi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "desktop.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "./node_modules/.bin/webpack",
+    "devel": "./node_modules/.bin/webpack-dev-server",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/S035779/mozu.git"
+    "url": "git+https://github.com/S035779/mikkabi.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/S035779/mozu/issues"
+    "url": "https://github.com/S035779/mikkabi/issues"
   },
-  "homepage": "https://github.com/S035779/mozu#readme",
+  "homepage": "https://github.com/S035779/mikkabi#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "^0.28.7",
+    "dotenv-webpack": "^1.5.4",
+    "electron": "1.7.9",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^2.0.7",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.9.1"
   },
   "dependencies": {
-    "flux": "^3.1.3",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router": "^4.2.0"
+    "classnames": "2.2.5",
+    "dotenv": "4.0.0",
+    "flux": "3.1.3",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-router-dom": "4.2.2"
   }
 }
