--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mikkabi",
+  "name": "mozu",
   "version": "1.0.0",
   "description": "",
   "main": "desktop.js",
@@ -10,25 +10,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/S035779/mikkabi.git"
+    "url": "git+https://github.com/S035779/mozu.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/S035779/mikkabi/issues"
+    "url": "https://github.com/S035779/mozu/issues"
   },
-  "homepage": "https://github.com/S035779/mikkabi#readme",
+  "homepage": "https://github.com/S035779/mozu#readme",
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-react": "6.24.1",
-    "css-loader": "^0.28.7",
-    "dotenv-webpack": "^1.5.4",
+    "css-loader": "0.28.7",
+    "dotenv-webpack": "1.5.4",
     "electron": "1.7.9",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^2.0.7",
+    "extract-text-webpack-plugin": "3.0.1",
+    "postcss-easy-import": "3.0.0",
+    "postcss-loader": "2.0.7",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.9.1"
   },
