--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.7",
     "dotenv-webpack": "1.5.4",
@@ -36,8 +37,11 @@
     "classnames": "2.2.5",
     "dotenv": "4.0.0",
     "flux": "3.1.3",
+    "iso8601-duration": "1.1.1",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "xml2js": "0.4.19",
+    "xmlbuilder": "9.0.4"
   }
 }
