--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.7",
-    "dotenv-webpack": "1.5.4",
-    "electron": "1.7.9",
     "extract-text-webpack-plugin": "3.0.1",
     "postcss-easy-import": "3.0.0",
     "postcss-loader": "2.0.7",
@@ -35,9 +33,10 @@
   },
   "dependencies": {
     "classnames": "2.2.5",
-    "dotenv": "4.0.0",
+    "d3": "4.11.0",
     "flux": "3.1.3",
     "iso8601-duration": "1.1.1",
+    "ramda": "0.25.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-router-dom": "4.2.2",
