--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "classnames": "2.2.5",
     "d3": "4.11.0",
+    "dotenv-webpack": "1.5.4",
     "flux": "3.1.3",
     "iso8601-duration": "1.1.1",
     "ramda": "0.25.0",
