--- a/package.json
+++ b/package.json
@@ -2,39 +2,32 @@
   "name": "WatchNote",
   "version": "1.0.0",
   "description": "Yahoo! Auction Search Tool.",
-  "main": "server.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "devel": "webpack-dev-server",
-    "start": "node server.js"
+    "build": "webpack",
+    "dev-server": "webpack-dev-server",
+    "ssr-server": "node --require ./src/hook/babel-register.js src/server.js",
+    "start": "npm-run-all --parallel dev-server ssr-server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/S035779/mozu.git"
-  },
-  "keywords": [],
-  "author": "Mamoru Hashimoto",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/S035779/mozu/issues"
-  },
-  "homepage": "https://github.com/S035779/mozu#readme",
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
+    "babel-register": "6.26.0",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.1",
+    "npm-run-all": "4.1.2",
     "postcss-easy-import": "3.0.0",
     "postcss-loader": "2.0.7",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.9.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "classnames": "2.2.5",
     "d3": "4.11.0",
     "dotenv-webpack": "1.5.4",
+    "express": "4.16.2",
     "flux": "3.1.3",
     "iso8601-duration": "1.1.1",
     "ramda": "0.25.0",
