--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ssr-server": "node --require ./src/hook/babel-register.js src/server.js",
     "start": "npm-run-all --parallel dev-server ssr-server"
   },
+  "license": "ISC",
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
@@ -23,13 +24,14 @@
     "webpack-dev-server": "2.9.1"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "1.18.2",
     "classnames": "2.2.5",
     "d3": "4.11.0",
     "dotenv-webpack": "1.5.4",
     "express": "4.16.2",
     "flux": "3.1.3",
     "iso8601-duration": "1.1.1",
+    "log4js": "2.3.12",
     "ramda": "0.25.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
